--- a/project/company/css/golabel.css
+++ b/project/company/css/golabel.css
@@ -221,7 +221,7 @@ body {
 	text-align: center;
 	background-color: #F7F7F7;
 }
-.section-two ul {
+/* .section-two ul {
 	margin: 30px 0 0 -15px;
 }
 .section-two li {
@@ -235,8 +235,7 @@ body {
 }
 .section-two img {
 	display: block;
-	width: 100%;
-	height: 100%;
+	width: 250px;
 }
 .section-two h5 {
 	margin-bottom: 0;
@@ -247,6 +246,49 @@ body {
 	font-weight: bold;
 	color: #8F808F;
 	letter-spacing: 2px;
+} */
+.relative {
+	position: relative;
+	margin-top: 50px;
+	/* height: 1000px; */
+}
+.relative .item{	
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 10px 10px;
+	margin: 10px 0 10px 10px;
+	/* border: 1px solid #ccc; */
+	box-shadow: 0 4px 8px rgba(0,0,0,0.2),4px 6px 12px rgba(0,0,0,0.19)
+}
+.item img {
+	width: 260px;
+}
+.item .title{
+	width: 260px;
+	margin: 10px 0;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #ccc;
+}
+.item .link {
+	display: block;
+}
+.item p{
+	width: 260px;
+	margin: 5px 0;
+	font-size: 14px;
+	/* overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap; */
+}
+.wrap>.load a{
+	display: inline-block;
+	border: 3px solid #666;
+	border-radius: 5px;
+	padding: 10px 20px;
+	margin-top: 50px;
+	font-size: 20px;
+	color: #000;
 }
 
 /* 段落二结束 */
