--- a/Component/TabComponent/index.html
+++ b/Component/TabComponent/index.html
@@ -65,7 +65,7 @@
 			display: block;
 		}
 	</style>
-	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="../jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="index.js"></script>
 </head>
 <body>
