--- a/Component/Exposure/index.html
+++ b/Component/Exposure/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script type="text/javascript" src="../jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
