--- a/Component/Rotation/index.html
+++ b/Component/Rotation/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="index.css">
         <script type="text/javascript" src="index.js"></script>
-        <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script type="text/javascript" src="../jquery-1.11.3.min.js"></script>
     </head>
     <body>
     	<div class="rotation">
