--- a/npm/webpack-demo/index.css
+++ b/npm/webpack-demo/index.css
@@ -1,1 +1,16 @@
-body{background-color:#f69}body header{width:100%;height:200px;border:1px solid #fcd}body header li{float:left;padding:10px}body header wos-color{color:#f69}
+body {
+  background-color: #ff6699;
+  background-image: url("/img/1.jpg");
+}
+body header {
+  width: 100%;
+  height: 200px;
+  border: 1px solid #ffccdd;
+}
+body header li {
+  float: left;
+  padding: 10px;
+}
+body header wos-color {
+  color: #ff6699;
+}
