--- a/musicPlayer/css/index.css
+++ b/musicPlayer/css/index.css
@@ -71,6 +71,31 @@ body {
     font-size: 13px;
     margin-top: 2px;
 }
+/*.conter-refresh {
+    padding: 10px 0 0 0;
+    text-align: center;
+    font-size: 16px;
+    color: #fff
+}*/
+
+.loading {
+  width: 30px;
+  height: 30px;
+  border: 10px solid rgba(255,255,255,0.2);
+  border-left-color: #fff;
+  border-radius: 50%;
+  margin: 20px auto 10px auto;
+  animation: 3s turn infinite linear
+}
+
+@keyframes turn {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /**
 *   主体
@@ -160,4 +185,141 @@ body {
     border-left: 5px solid #29abe2;
 }
 
+/**
+*   音乐详情页
+*/
+#musicdetails {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('../img/detailsBg.jpg') bottom no-repeat;
+    background-size: cover;
+    z-index: 99;
+}
 
+/**
+*   details-title
+*/
+#musicdetails .details-title {
+    height: 40px;
+    background-color: rgba(41,171,226,0.6);
+    font-size: 20px;
+    line-height: 40px;
+    text-align: center;
+    color: #fff;
+}
+#musicdetails .details-name > span {
+    font-size: 12px;
+    margin-left: 10px;
+}
+#musicdetails .detaols-tip {
+    position: absolute;
+    top: 12px;
+    right: 15px;
+    width: 16px;
+    height: 16px;
+    background: url('../img/details_arrow.png') center no-repeat;
+    background-size: cover;
+}
+
+/**
+*   播放控制
+*/
+#musicdetails .details-audio {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;  
+}
+.details-audio .details-audioAll {
+    position: relative;
+    width: 200px;
+    margin: 20px auto;
+}
+.details-audioAll .details-audioPro {
+    /*position: relative;*/
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    border-radius: 5px;
+}
+.details-audioPro .details-audioProUp {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #29abe2;
+}
+.details-audioPro .details-audioProBar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 15px;
+    height: 15px;
+    margin: -7px;
+    background-color: #29abe2;
+    border-radius: 50%;
+}
+.details-audioAll .details-nowTime {
+    position: absolute;
+    top: -9px;
+    left: -45px;
+    font-size: 12px;
+    color: #b3b3b3;
+}
+.details-audioAll .details-allTime {
+    position: absolute;
+    top: -9px;
+    right: -45px;
+    font-size: 12px;
+    color: #b3b3b3;
+}
+.details-audioAll .details-play{
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    width: 55px;
+    height: 55px;
+    transform: translateX(-50%);
+    background: url('../img/details_play.png') no-repeat;
+    background-size: cover;
+}
+.details-audioAll .details-prev {
+    position: absolute;
+    top: 37px;
+    left: 10px;
+    width: 37px;
+    height: 37px;
+    background: url('../img/details_prev.png') no-repeat;
+    background-size: cover;
+}
+.details-audioAll .details-next {
+    position: absolute;
+    top: 37px;
+    right: 10px;
+    width: 37px;
+    height: 37px;
+    background: url('../img/details_next.png') no-repeat;
+    background-size: cover;
+}
+.details-audio .details-btn {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    height: 20px;
+    text-align: center;
+}
+.details-btn li {
+    display: inline-block;
+    width: 7px;
+    height: 7px;
+    background-color: #29abe2;
+    border-radius: 5px; 
+}
+.details-btn li.active {
+    width: 21px;
+}
