--- a/musicPlayer/css/index.css
+++ b/musicPlayer/css/index.css
@@ -139,7 +139,7 @@ body {
     bottom: 0;
     width: 100%;
     height: 65px;
-    padding: 0 15px 0 15px;
+    padding: 0 30px 0 15px;
     background: url('../img/list_audioBg.png') repeat-x;
     box-sizing: border-box;
 }
@@ -149,18 +149,31 @@ body {
     margin-top: 7px;
     border-radius: 50%;
 }
+.audio .audio-img.Imgrotate {
+    animation: Imgrotate 6s linear infinite;
+}
+
 .audio .audio-text {
     float: left;
     padding: 10px 0 0 20px;
 }
 .audio .audio-btn {
     float: right;
-    width: 32px;
-    height: 32px;
-    margin-top: 16px;
+    width: 40px;
+    height: 40px;
+    margin-top: 12px;
     background: url('../img/list_audioPlay.png') no-repeat;
     background-size: cover;
     display: none;
+}
+
+@keyframes Imgrotate {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
 
 /**
