--- a/musicPlayer/css/index.css
+++ b/musicPlayer/css/index.css
@@ -210,6 +210,7 @@ body {
     background: url('../img/detailsBg.jpg') bottom no-repeat;
     background-size: cover;
     z-index: 99;
+    overflow: hidden;
 }
 
 /**
@@ -250,6 +251,7 @@ body {
     top: 40px;
     bottom: 150px;
     overflow: hidden;
+    transition: 0.5s;
 }
 .details-lyric > .details-lyric-ul {
     width: 100%;
@@ -262,7 +264,7 @@ body {
     transition: 5s;
 }
 .details-lyric li {
-    margin-top: 10px;   
+    margin-top: 10px; 
 }
 .details-lyric li.hover {
     color: #00ffff; 
@@ -282,6 +284,7 @@ body {
     position: relative;
     width: 200px;
     margin: 20px auto;
+    transition: 0.5s;
 }
 .details-audioAll .details-audioPro {
     /*position: relative;*/
@@ -363,7 +366,57 @@ body {
     height: 7px;
     background-color: #29abe2;
     border-radius: 5px; 
+    transition: .5s;
 }
 .details-btn li.active {
     width: 21px;
+}
+
+/**
+*   留言板块
+*/
+#musicdetails #detailsMessage {
+    position: absolute;
+    top: 40px;
+    bottom: 40px;
+    width: 100%;
+    padding: 0 30px;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+#detailsMessage textarea {
+    width: 100%;
+    height: 100px;
+    background-color: #9babb2;
+    border-radius: 5px;
+    margin-top: 10px;
+    padding: 5px;
+    box-sizing: border-box;
+}
+::-webkit-input-placeholder{ 
+    color:black;
+}
+::-moz-input-placeholder{ 
+    color:black;
+}
+#detailsMessage input {
+    width: 100%;
+    height: 30px;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    background-color: #29abe2;
+}
+#detailsMessage ul {
+    width: 100%;
+    font-size: 12px;
+}
+#detailsMessage li {
+    float:left;
+    background-color: rgba(26,26,26,0.6);
+    border-radius: 5px;
+    padding: 5px;
+    clear: both;
+    margin-top: 10px;
+    color: #fff;
 }
