--- a/musicPlayer/css/index.css
+++ b/musicPlayer/css/index.css
@@ -111,6 +111,96 @@ body {
 }
 
 /**
+*   加载效果
+*/
+#loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 20;
+    overflow: hidden;
+}
+#loading .content1,
+#loading .content2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    margin: -15px 0 0 -15px;
+}
+#loading .content2 {
+    transform: rotate(45deg);
+}
+#loading .content1 > div,
+#loading .content2 > div {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background-color: #fff;
+    border-radius: 50%;
+    animation: loadingMove 2s linear infinite;
+}
+#loading .content1 .round1,
+#loading .content2 .round1 {
+    top:0;
+    left:0;
+}
+#loading .content1 .round2,
+#loading .content2 .round2 {
+    top:0;
+    right:0;
+}
+#loading .content1 .round3,
+#loading .content2 .round3 {
+    bottom:0;
+    right:0;
+}
+#loading .content1 .round4,
+#loading .content2 .round4 {
+    bottom:0;
+    left:0;
+}
+@keyframes loadingMove {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+#loading .content1 .round1 {
+    animation-delay: 0.1s;
+}
+#loading .content2 .round1 {
+    animation-delay: 0.3s;
+}
+#loading .content1 .round2 {
+    animation-delay: 0.5s;
+}
+#loading .content2 .round2 {
+    animation-delay: 0.7s;
+}
+#loading .content1 .round3 {
+    animation-delay: 0.9s;
+}
+#loading .content2 .round3 {
+    animation-delay: 1.1s;
+}
+#loading .content1 .round4 {
+    animation-delay: 1.3s;
+}
+#loading .content2 .round4 {
+    animation-delay: 1.5s;
+}
+
+/**
 *   music-title
 */
 #music-list .music-title {
@@ -209,7 +299,7 @@ body {
     height: 100%;
     background: url('../img/detailsBg.jpg') bottom no-repeat;
     background-size: cover;
-    z-index: 99;
+    z-index: 10;
     overflow: hidden;
 }
 
