--- a/Sass-Exercise/css/index.css
+++ b/Sass-Exercise/css/index.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+/*
+  题目1  
+*/
 .alert {
   padding: 15px;
   margin: 10px 0;
@@ -26,138 +29,29 @@
   border-color: #EBCCD1;
 }
 
-.container {
-  width: 10px;
+/*
+    题目2
+*/
+.col1 {
+  width: 20%;
 }
 
-@media screen and (max-width: 900px) {
-  .container {
-    font-size: 20px;
-  }
+.col2 {
+  width: 40%;
 }
 
-.info {
-  color: blue;
+.col3 {
+  width: 60%;
 }
 
-nav .info {
-  color: red;
+.col4 {
+  width: 80%;
+}
+
+.col5 {
+  width: 100%;
 }
 
 /*
     继承
 */
-.alert-info {
-  background-color: #ffeedd;
-}
-
-.small, .alert-info {
-  font-size: 12px;
-}
-
-.alert-info {
-  color: #000;
-}
-
-.one, .two, .three {
-  border: 1px solid red;
-}
-
-.two, .three {
-  color: blue;
-}
-
-.three {
-  border-radius: 4px;
-}
-
-a span, a div .content, div a .content {
-  font-weight: blod;
-}
-
-/*
-    @mixin
-*/
-.container {
-  color: red;
-  font-size: 18px;
-}
-
-.shadows {
-  box-shadow: 0px 4px 4px #555, 2px 6px 10px #6dd3ee;
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
-  font-size: 12px;
-}
-
-/*
-    条件控制
-*/
-body {
-  color: red;
-}
-
-span, div .content {
-  color: green;
-}
-
-.span1 {
-  width: 20%;
-}
-
-.span2 {
-  width: 40%;
-}
-
-.span3 {
-  width: 60%;
-}
-
-.span4 {
-  width: 80%;
-}
-
-.p6 {
-  width: 120%;
-}
-
-.p3 {
-  width: 60%;
-}
-
-.div1 {
-  color: blue;
-}
-
-.div2 {
-  color: red;
-}
-
-.div3 {
-  color: green;
-}
-
-.text-default {
-  color: blue;
-}
-
-.text-info {
-  color: red;
-}
-
-.text-danger {
-  color: green;
-}
-
-.label-default {
-  color: blue;
-}
-
-.label-info {
-  color: green;
-}
-
-.label-danger {
-  color: red;
-}
