--- a/npm/jishupang-webpack-demo/src/css/index.css
+++ b/npm/jishupang-webpack-demo/src/css/index.css
@@ -2,3 +2,8 @@ body {
 	background-color: red;
 	color: white;
 }
+#tupian {
+	width: 200px;
+	height: 300px;
+	background-image: url('../images/0b7b02087bf40ad108fb43295e2c11dfa8ecced9.jpg')
+}
