--- a/npm/jishupang-webpack-demo/src/css/index.css
+++ b/npm/jishupang-webpack-demo/src/css/index.css
@@ -2,8 +2,16 @@ body {
 	background-color: red;
 	color: white;
 }
+
 #tupian {
 	width: 200px;
 	height: 300px;
-	background-image: url('../images/0b7b02087bf40ad108fb43295e2c11dfa8ecced9.jpg')
+	margin-bottom: 50px;
+	background-image: url('../images/0b7b02087bf40ad108fb43295e2c11dfa8ecced9.jpg');
+	transform: rotate(45deg);
+}
+
+#abc {
+	background-color: red;
+	color: white;
 }
