--- a/npm/jishupang-webpack-demo/src/css/yellow.scss
+++ b/npm/jishupang-webpack-demo/src/css/yellow.scss
@@ -4,4 +4,11 @@ $base-color: yellow;
     width: 100%;
     height: 30px;
     background-color: $base-color;
+    #title {
+        color: #000;
+        font-size: 40px;
+    }
+    .test {
+        color: #000;
+    }
 }
