--- a/MobileTerminal/src/css/index.scss
+++ b/MobileTerminal/src/css/index.scss
@@ -100,7 +100,7 @@ body {
 				left: con(16px);
 				width: con(23px);
 				height: con(23px);
-				background: url('../image/ico-search.jpg');
+				background: url('../image/ico-search.jpg') no-repeat;
 			}
 			.search_input {
 				width: con(480px);
